Chapter10/kubernetes/metrics/prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: example
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yaml
              name: volume-config
          ports:
            - containerPort: 9090
      volumes:
        - name: volume-config
          configMap:
            name: prometheus-config
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
  namespace: example
spec:
  selector:
    app: prometheus
  ports:
    - name: prometheus
      protocol: TCP
      port: 80
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: example
spec:
  rules:
    - host: prometheus.example.local
      http:
        paths:
          - backend:
              service:
                name: prometheus-service
                port:
                  number: 80
            path: /
            pathType: Prefix
